fixed bugged alignment of 'exit' buttons

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,3 +24,6 @@
 .buttonBox {
     -fx-padding:0 20 0 0; /*top right bottom left*/
 }
+.exitButtonBox {
+    -fx-alignment: center;
+}
